--- a/product-list.html
+++ b/product-list.html
@@ -528,7 +528,8 @@
                                     <td class="px-9 py-3 text-end">
                                         <div class="flex items-center justify-end space-x-2">
                                             <div class="relative" x-data="{ editTooltip: false }">
-                                                <button 
+                                                <a href="edit-product.html">
+                                                    <button 
                                                 class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                 x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                 >
@@ -536,7 +537,8 @@
                                                     <path fill="currentColor" d="m304.140625 82.472656-270.976563 270.996094c-1.363281 1.367188-2.347656 3.09375-2.816406 4.949219l-30.035156 120.554687c-.898438 3.628906.167969 7.488282 2.816406 10.136719 2.003906 2.003906 4.734375 3.113281 7.527344 3.113281.855469 0 1.730469-.105468 2.582031-.320312l120.554688-30.039063c1.878906-.46875 3.585937-1.449219 4.949219-2.8125l271-270.976562zm0 0"/>
                                                     <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                 </svg>
-                                                </button>
+                                                    </button>
+                                                </a>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                     <a href="edit-product.html">
                                                         <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
@@ -602,7 +604,8 @@
                                     <td class="px-9 py-3 text-end">
                                         <div class="flex items-center justify-end space-x-2">
                                             <div class="relative" x-data="{ editTooltip: false }">
-                                                <button 
+                                                <a href="edit-product.html">
+                                                    <button 
                                                 class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                 x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                 >
@@ -610,7 +613,8 @@
                                                     <path fill="currentColor" d="m304.140625 82.472656-270.976563 270.996094c-1.363281 1.367188-2.347656 3.09375-2.816406 4.949219l-30.035156 120.554687c-.898438 3.628906.167969 7.488282 2.816406 10.136719 2.003906 2.003906 4.734375 3.113281 7.527344 3.113281.855469 0 1.730469-.105468 2.582031-.320312l120.554688-30.039063c1.878906-.46875 3.585937-1.449219 4.949219-2.8125l271-270.976562zm0 0"/>
                                                     <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                 </svg>
-                                                </button>
+                                                    </button>
+                                                </a>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                     <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                     <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -674,7 +678,8 @@
                                     <td class="px-9 py-3 text-end">
                                         <div class="flex items-center justify-end space-x-2">
                                             <div class="relative" x-data="{ editTooltip: false }">
-                                                <button 
+                                                <a href="edit-product.html">
+                                                    <button 
                                                 class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                 x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                 >
@@ -682,7 +687,8 @@
                                                     <path fill="currentColor" d="m304.140625 82.472656-270.976563 270.996094c-1.363281 1.367188-2.347656 3.09375-2.816406 4.949219l-30.035156 120.554687c-.898438 3.628906.167969 7.488282 2.816406 10.136719 2.003906 2.003906 4.734375 3.113281 7.527344 3.113281.855469 0 1.730469-.105468 2.582031-.320312l120.554688-30.039063c1.878906-.46875 3.585937-1.449219 4.949219-2.8125l271-270.976562zm0 0"/>
                                                     <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                 </svg>
-                                                </button>
+                                                    </button>
+                                                </a>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                     <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                     <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -746,7 +752,8 @@
                                     <td class="px-9 py-3 text-end">
                                         <div class="flex items-center justify-end space-x-2">
                                             <div class="relative" x-data="{ editTooltip: false }">
-                                                <button 
+                                                <a href="edit-product.html">
+                                                    <button 
                                                 class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                 x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                 >
@@ -754,7 +761,8 @@
                                                     <path fill="currentColor" d="m304.140625 82.472656-270.976563 270.996094c-1.363281 1.367188-2.347656 3.09375-2.816406 4.949219l-30.035156 120.554687c-.898438 3.628906.167969 7.488282 2.816406 10.136719 2.003906 2.003906 4.734375 3.113281 7.527344 3.113281.855469 0 1.730469-.105468 2.582031-.320312l120.554688-30.039063c1.878906-.46875 3.585937-1.449219 4.949219-2.8125l271-270.976562zm0 0"/>
                                                     <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                 </svg>
-                                                </button>
+                                                    </button>
+                                                </a>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                     <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                     <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -818,7 +826,8 @@
                                     <td class="px-9 py-3 text-end">
                                         <div class="flex items-center justify-end space-x-2">
                                             <div class="relative" x-data="{ editTooltip: false }">
-                                                <button 
+                                                <a href="edit-product.html">
+                                                    <button 
                                                 class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                 x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                 >
@@ -826,7 +835,8 @@
                                                     <path fill="currentColor" d="m304.140625 82.472656-270.976563 270.996094c-1.363281 1.367188-2.347656 3.09375-2.816406 4.949219l-30.035156 120.554687c-.898438 3.628906.167969 7.488282 2.816406 10.136719 2.003906 2.003906 4.734375 3.113281 7.527344 3.113281.855469 0 1.730469-.105468 2.582031-.320312l120.554688-30.039063c1.878906-.46875 3.585937-1.449219 4.949219-2.8125l271-270.976562zm0 0"/>
                                                     <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                 </svg>
-                                                </button>
+                                                    </button>
+                                                </a>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                     <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                     <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -890,7 +900,8 @@
                                     <td class="px-9 py-3 text-end">
                                         <div class="flex items-center justify-end space-x-2">
                                             <div class="relative" x-data="{ editTooltip: false }">
-                                                <button 
+                                                <a href="edit-product.html">
+                                                    <button 
                                                 class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                 x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                 >
@@ -898,7 +909,8 @@
                                                     <path fill="currentColor" d="m304.140625 82.472656-270.976563 270.996094c-1.363281 1.367188-2.347656 3.09375-2.816406 4.949219l-30.035156 120.554687c-.898438 3.628906.167969 7.488282 2.816406 10.136719 2.003906 2.003906 4.734375 3.113281 7.527344 3.113281.855469 0 1.730469-.105468 2.582031-.320312l120.554688-30.039063c1.878906-.46875 3.585937-1.449219 4.949219-2.8125l271-270.976562zm0 0"/>
                                                     <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                 </svg>
-                                                </button>
+                                                    </button>
+                                                </a>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                     <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                     <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -962,7 +974,8 @@
                                     <td class="px-9 py-3 text-end">
                                         <div class="flex items-center justify-end space-x-2">
                                             <div class="relative" x-data="{ editTooltip: false }">
-                                                <button 
+                                                <a href="edit-product.html">
+                                                    <button 
                                                 class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                 x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                 >
@@ -970,7 +983,8 @@
                                                     <path fill="currentColor" d="m304.140625 82.472656-270.976563 270.996094c-1.363281 1.367188-2.347656 3.09375-2.816406 4.949219l-30.035156 120.554687c-.898438 3.628906.167969 7.488282 2.816406 10.136719 2.003906 2.003906 4.734375 3.113281 7.527344 3.113281.855469 0 1.730469-.105468 2.582031-.320312l120.554688-30.039063c1.878906-.46875 3.585937-1.449219 4.949219-2.8125l271-270.976562zm0 0"/>
                                                     <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                 </svg>
-                                                </button>
+                                                    </button>
+                                                </a>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                     <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                     <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -1034,7 +1048,8 @@
                                     <td class="px-9 py-3 text-end">
                                         <div class="flex items-center justify-end space-x-2">
                                             <div class="relative" x-data="{ editTooltip: false }">
-                                                <button 
+                                                <a href="edit-product.html">
+                                                    <button 
                                                 class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                 x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                 >
@@ -1042,7 +1057,8 @@
                                                     <path fill="currentColor" d="m304.140625 82.472656-270.976563 270.996094c-1.363281 1.367188-2.347656 3.09375-2.816406 4.949219l-30.035156 120.554687c-.898438 3.628906.167969 7.488282 2.816406 10.136719 2.003906 2.003906 4.734375 3.113281 7.527344 3.113281.855469 0 1.730469-.105468 2.582031-.320312l120.554688-30.039063c1.878906-.46875 3.585937-1.449219 4.949219-2.8125l271-270.976562zm0 0"/>
                                                     <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                 </svg>
-                                                </button>
+                                                    </button>
+                                                </a>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                     <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                     <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
