--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     <div class="widget-item bg-white p-6 flex justify-between rounded-md">
                         <div>
                             <h4 class="text-xl font-semibold text-slate-700 mb-1 leading-none">356</h4>
-                            <p class="text-tiny leading-4">Orders Received</p>
+                            <p class="text-tiny leading-4">Products</p>
                             <div class="badge space-x-1"> <span>10%</span> 
                                 <svg width="12" height="12" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 1V18C1 19.66 2.34 21 4 21H21" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
